--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,6 @@ set (test ${CMAKE_CURRENT_SOURCE_DIR}/test)
 message("src:${src}")
 add_library(parameter ${src}/parameter.cpp)
 add_library(utils ${src}/utils.cpp)
-# add_library(udp udp.cpp)
 add_library(pickle ${src}/pickle.cpp)
 add_library(reqrep ${src}/reqrep.cpp)
 add_library(bus ${src}/bus.cpp)
@@ -63,7 +62,7 @@ find_package(Python REQUIRED COMPONENTS Interpreter Development)
 # 添加包含目录和链接库
 include_directories(${Python_INCLUDE_DIRS})
 link_libraries(${Python_LIBRARIES})
-add_executable(test ${src}/bus.cpp ${src}/parameter.cpp ${src}/reqrep.cpp ${src}/utils.cpp ${test}/test.cpp ${src}/pickle.cpp ${src}/udp.cpp)
+add_executable(test ${src}/bus.cpp ${src}/parameter.cpp ${src}/reqrep.cpp ${src}/utils.cpp ${test}/test1.cpp ${src}/pickle.cpp ${src}/udp.cpp)
 
 # 添加头文件搜索路径
 target_include_directories(test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
